fixed word breaks in course cards (#1778)

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -836,6 +836,7 @@ table.navigatable tr:hover {
   .card-content .card-title.white-text {
     line-height: normal;
     font-size: 24px;
+    word-break: break-word;
   }
 
   .collection {
